--- a/boards/shields/lily58/lily58_dongle.conf
+++ b/boards/shields/lily58/lily58_dongle.conf
@@ -5,3 +5,5 @@ CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
