--- a/build.yaml
+++ b/build.yaml
@@ -9,7 +9,12 @@
 # shield: [ "corne_left", "corne_right" ]
 # include:
 #   - board: bdn9_rev2
-#   - board: nice_nano_v2
+#   - board: nice_na
+
+
+
+
+no_v2
 #     shield: reviung41
 #   - board: nice_nano_v2
 #     shield: corne_left
@@ -26,6 +31,7 @@ include:
     
   - board: nice_nano_v2
     shield: lily58_dongle nice_view_adapter nice_view
+    snippet: zmk-usb-logging
     
   - board: nice_nano_v2
     shield: settings_reset
