--- a/build.yaml
+++ b/build.yaml
@@ -29,7 +29,7 @@ include:
   - board: nice_nano_v2
     shield: lily58_right nice_view_adapter nice_view
     
-  - board: nice_nano_v2
+  - board: raytac_mdbt50q_rx
     shield: lily58_dongle nice_view_adapter nice_view
     snippet: zmk-usb-logging
     
