--- a/build.yaml
+++ b/build.yaml
@@ -23,15 +23,15 @@
 #
 ---
 include:
-  - board: nice_nano_v2
-    shield: lily58_left nice_view_adapter nice_view
+#  - board: nice_nano_v2
+#    shield: lily58_left nice_view_adapter nice_view
     
-  - board: nice_nano_v2
-    shield: lily58_right nice_view_adapter nice_view
+#  - board: nice_nano_v2
+#    shield: lily58_right nice_view_adapter nice_view
     
   - board: raytac_mdbt50q_rx
     shield: lily58_dongle nice_view_adapter nice_view
     snippet: zmk-usb-logging
     
-  - board: nice_nano_v2
-    shield: settings_reset
+#  - board: nice_nano_v2
+#    shield: settings_reset
