--- a/build.yaml
+++ b/build.yaml
@@ -30,8 +30,7 @@ include:
 #    shield: lily58_right nice_view_adapter nice_view
     
   - board: raytac_mdbt50q_rx
-    shield: lily58_dongle nice_view_adapter nice_view
-    snippet: zmk-usb-logging
+    shield: lily58_dongle
     
 #  - board: nice_nano_v2
 #    shield: settings_reset
