--- a/build.yaml
+++ b/build.yaml
@@ -32,5 +32,5 @@ include:
   - board: raytac_mdbt50q_rx
     shield: lily58_dongle
     
-#  - board: nice_nano_v2
-#    shield: settings_reset
+  - board: raytac_mdbt50q_rx
+    shield: settings_reset
