--- a/boards/shields/lily58/lily58.zmk.yml
+++ b/boards/shields/lily58/lily58.zmk.yml
@@ -1,1 +1,14 @@
-
+file_format: "1"
+id: lily58
+name: Lily58
+type: shield
+url: https://github.com/kata0510/Lily58
+requires: [pro_micro]
+exposes: [i2c_oled]
+features:
+  - keys
+  - display
+siblings:
+  - lily58_left
+  - lily58_right
+  - lily58_dongle
