--- a/build.yaml
+++ b/build.yaml
@@ -31,6 +31,7 @@ include:
     
   - board: raytac_mdbt50q_rx
     shield: lily58_dongle
+    snippet: zmk-usb-logging
     
   - board: raytac_mdbt50q_rx
     shield: settings_reset
