--- a/build.yaml
+++ b/build.yaml
@@ -31,7 +31,10 @@ include:
     
   - board: raytac_mdbt50q_rx
     shield: lily58_dongle
-    cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
+#    cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
     
 #  - board: raytac_mdbt50q_rx
+#    shield: settings_reset
+
+#  - board: nice_nano_v2
 #    shield: settings_reset
