--- a/build.yaml
+++ b/build.yaml
@@ -31,6 +31,8 @@ include:
     
   - board: raytac_mdbt50q_rx
     shield: lily58_dongle
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
     
   - board: raytac_mdbt50q_rx
     shield: settings_reset
